Feat : Ajout de Endpoints pour avoir toutes les metadonnées ( véhicules, users etc. )
